# TradeBot

./: .env.example  .gitignore  BLUEPRINT.md  Dockerfile  MVP.md  Makefile  README.md  blueprint_trading_bot.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  tradebot_mvp.md
analysis/: backtest_report.py
bot_logs/: Backtesting_breakoutAtr_15m_nov24-sep25.csv  Backtesting_breakoutAtr_30m_nov24-sep25.csv  Backtesting_breakoutAtr_3m_nov24-sep25.csv  Backtesting_breakoutAtr_4h_nov24-sep25.csv  Backtesting_breakoutAtr_5m_nov24-sep25.csv  Breakout_ATR.txt  Breakout_Vol.txt  Mean Reversion.txt  Momentum.txt  backtesting_breackoutAtr_15m_nov24-sep25.csv  backtesting_breackoutAtr_1h_nov24-sep25.csv  backtesting_breackoutVol_15m_nov24-sep25.csv  backtesting_breackoutVol_1h_nov24-sep25.csv  backtesting_breakoutAtr_15m_nov24-sep25.csv  backtesting_breakoutAtr_1h_nov24-sep25.csv  backtesting_breakoutAtr_30m_nov24-sep25.csv  backtesting_breakoutAtr_3m_nov24-sep25.csv  backtesting_breakoutAtr_4h_nov24-sep25.csv  backtesting_breakoutAtr_5m_nov24-sep25.csv  backtesting_breakoutVol_15m_nov24-sep25.csv  backtesting_breakoutVol_1h_nov24-sep25.csv  backtesting_breakoutVol_30m_nov24-sep25.csv  backtesting_breakoutVol_3m_nov24-sep25.csv  backtesting_breakoutVol_4h_nov24-sep25.csv  backtesting_breakoutVol_5m_nov24-sep25.csv  backtesting_meanReversion_15m_nov24-sep25.csv  backtesting_meanReversion_1h_nov24-sep25.csv  backtesting_meanReversion_30h_nov24-sep25.csv  backtesting_meanReversion_30m_nov24-sep25.csv  backtesting_meanReversion_3m_nov24-sep25.csv  backtesting_meanReversion_4h_nov24-sep25.csv  backtesting_meanReversion_5m_nov24-sep25.csv  backtesting_momentum_15m_nov24-sep25.csv  (+18 more)
db/: schema.sql
(+433 files in other folders)
