[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebot"
version = "0.1.0"
description = "Modular trading bot framework"
authors = [{name = "TradeBot Dev"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt",
    "pandas",
    "numpy",
    "pydantic",
    "pydantic-settings",
    "typer[all]",
    "websockets",
    "uvloop; platform_system != 'Windows'",
]

[project.scripts]
tradebot = "tradebot.cli:app"
