[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot-mvp"
version = "0.1.0"
description = "MVP de bot de trading intradía/scalping/arbitraje (local)"
authors = [{name="Tu Nombre", email="you@example.com"}]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
vectorbt = ["vectorbt>=0.26"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tradingbot"]

[tool.setuptools.package-data]
"tradingbot" = ["db/*.sql"]

[tool.pytest.ini_options]
markers = [
    "optional: tests requiring optional dependencies",
    "integration: integration tests",
]
